RESOLVED FIXED72873
Web Inspector: [Regression] Successfully loaded XHRs are shown as canceled.
https://bugs.webkit.org/show_bug.cgi?id=72873
Summary Web Inspector: [Regression] Successfully loaded XHRs are shown as canceled.
Vsevolod Vlasov
Reported 2011-11-21 04:48:44 PST
Attachments
Patch (5.17 KB, patch)
2011-11-24 07:56 PST, Vsevolod Vlasov
japhet: review+
Vsevolod Vlasov
Comment 1 2011-11-24 07:56:05 PST
Nate Chapin
Comment 2 2011-11-28 08:56:29 PST
Comment on attachment 116513 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116513&action=review > Source/WebCore/loader/SubresourceLoader.cpp:114 > +void SubresourceLoader::cancelCachedResourceLoad() > +{ > + if (m_state != Initialized) > + return; > + > + ResourceLoader::cancel(); > +} Does it break other things to name this cancel() and override ResourceLoader::cancel() ?
Vsevolod Vlasov
Comment 3 2011-11-30 12:44:23 PST
(In reply to comment #2) > (From update of attachment 116513 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=116513&action=review > > > Source/WebCore/loader/SubresourceLoader.cpp:114 > > +void SubresourceLoader::cancelCachedResourceLoad() > > +{ > > + if (m_state != Initialized) > > + return; > > + > > + ResourceLoader::cancel(); > > +} > > Does it break other things to name this cancel() and override ResourceLoader::cancel() ? Looks like this can break other cancel scenarios, e.g. like here http://codesearch.google.com/codesearch#OAMlx_jo-ck/src/third_party/WebKit/Source/WebCore/loader/SubresourceLoader.cpp&l=204&type=cs
Nate Chapin
Comment 4 2011-11-30 12:54:54 PST
Comment on attachment 116513 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116513&action=review >>> Source/WebCore/loader/SubresourceLoader.cpp:114 >>> +} >> >> Does it break other things to name this cancel() and override ResourceLoader::cancel() ? > > Looks like this can break other cancel scenarios, e.g. like here http://codesearch.google.com/codesearch#OAMlx_jo-ck/src/third_party/WebKit/Source/WebCore/loader/SubresourceLoader.cpp&l=204&type=cs Alright, thanks for checking. I'd slightly prefer a name like "cancelIfNotFinishing", but you can feel free to land without another review so long as it still compiles :)
Vsevolod Vlasov
Comment 5 2011-11-30 13:09:12 PST
Note You need to log in before you can comment on or make changes to this bug.