Web Inspector: [Regression] Successfully loaded XHRs are shown as canceled. https://bugs.webkit.org/show_bug.cgi?id=72873

Reviewed by Nate Chapin.

Source/WebCore:

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::cancelIfNotFinishing):
* loader/SubresourceLoader.h:
* loader/cache/CachedRawResource.cpp:
(WebCore::CachedRawResource::allClientsRemoved):

LayoutTests:

* http/tests/inspector/network/network-xhr-async.html:
* http/tests/inspector/network/network-xhr-sync.html:

Canonical link: https://commits.webkit.org/90025@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101545 268f45cc-cd09-0410-ab3c-d52691b4dbfc