Source/WebCore/loader/SubresourceLoader.h
@@ -44,9 +44,12 @@ class SubresourceLoader : public ResourceLoader {
 public:
     static PassRefPtr<SubresourceLoader> create(Frame*, CachedResource*, const ResourceRequest&, const ResourceLoaderOptions&);
 
+    void cancelIfNotFinishing();
+
 private:
     SubresourceLoader(Frame*, CachedResource*, const ResourceLoaderOptions&);
     virtual ~SubresourceLoader();
+
     virtual bool init(const ResourceRequest&);
 
     virtual void willSendRequest(ResourceRequest&, const ResourceResponse& redirectResponse);
